--- a/flowers.kh/Index.html
+++ b/flowers.kh/Index.html
@@ -6,7 +6,7 @@
         Букеты из конфет
     </title>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="/img/icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -116,7 +116,7 @@
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis laudantium aspernatur dolor.</p>
                             </div>
                             <div class="item-icon text-right">
-                               <img src="/img/img_17.jpg" class="icon-wrap">
+                               <img src="img/img_17.jpg" class="icon-wrap">
                             </div>
                         </div>
                         <div class="section-class-item">
@@ -125,7 +125,7 @@
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis laudantium aspernatur dolor.</p>
                                 </div>
                                 <div class="item-icon text-right">
-                                        <img src="/img/img_special.jpg" class="icon-wrap">
+                                        <img src="img/img_special.jpg" class="icon-wrap">
                                 </div>
                             </div>
                             <div class="section-class-item">
@@ -134,21 +134,21 @@
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis laudantium aspernatur dolor.</p>
                                     </div>
                                     <div class="item-icon text-right">
-                                            <img src="/img/fruit.jpg" class="icon-wrap">
+                                            <img src="img/fruit.jpg" class="icon-wrap">
                                     </div>
                                 </div>
                 </div>
                 </div>
                 <div class="col-md-4 col-xs-12">
                     <div class="section-class-image text-center wow shake">
-                        <img src="/img/ovoschnoy-buket-1.jpg" alt="iphone">
+                        <img src="img/ovoschnoy-buket-1.jpg" alt="iphone">
                     </div>
                 </div>
                 <div class="col-md-4 col-xs-12">
                     <div class="items-left wow bounceInRight" data-wow-duration="4s">
                         <div class="section-class-item">
                                 <div class="item-icon text-left">
-                                        <img src="/img/img_7.jpg" class="icon-wrap">
+                                        <img src="img/img_7.jpg" class="icon-wrap">
                                     </div>
                             <div class="item-text text-left">
                                 <h3>Бутоньерки</h3>
@@ -157,7 +157,7 @@
                         </div>
                         <div class="section-class-item">
                                 <div class="item-icon text-left">
-                                        <img src="/img/img_19.jpg" class="icon-wrap">
+                                        <img src="img/img_19.jpg" class="icon-wrap">
                                     </div>
                                 <div class="item-text text-left">
                                     <h3>Веночки</h3>
@@ -166,7 +166,7 @@
                             </div>
                             <div class="section-class-item">
                                 <div class="item-icon text-left">
-                                        <img src="/img/unknown.png" class="icon-wrap">
+                                        <img src="img/unknown.png" class="icon-wrap">
                                     </div>
                                     <div class="item-text text-left">
                                         <h3>Другое</h3>
@@ -184,18 +184,18 @@
             <div class="container-fluid">
                     <div class="masonry-container">
                         <div class="row">
-                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="/img/img_1.jpg" alt="alt"></div>
-                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="/img/img_2.jpg" alt="alt"></div>
-                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="/img/img_3.jpg" alt="alt"></div>
-                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="/img/img_4.jpg" alt="alt"></div>
-                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="/img/img_5.jpg" alt="alt"></div>
-                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="/img/img_6.jpg" alt="alt"></div>
-                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="/img/img_7.jpg" alt="alt"></div>
-                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="/img/img_8.jpg" alt="alt"></div>
-                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="/img/img_10.jpg" alt="alt"></div>
-                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="/img/img_11.jpg" alt="alt"></div>
-                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="/img/img_12.jpg" alt="alt"></div>
-                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="/img/img_13.jpg" alt="alt"></div>
+                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="img/img_1.jpg" alt="alt"></div>
+                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="img/img_2.jpg" alt="alt"></div>
+                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="img/img_3.jpg" alt="alt"></div>
+                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="img/img_4.jpg" alt="alt"></div>
+                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="img/img_5.jpg" alt="alt"></div>
+                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="img/img_6.jpg" alt="alt"></div>
+                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="img/img_7.jpg" alt="alt"></div>
+                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="img/img_8.jpg" alt="alt"></div>
+                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="img/img_10.jpg" alt="alt"></div>
+                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="img/img_11.jpg" alt="alt"></div>
+                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="img/img_12.jpg" alt="alt"></div>
+                        <div class="col-md-3 col-sm-4 col-xs-6 item"><img src="img/img_13.jpg" alt="alt"></div>
 
                         </div>
                     </div>
@@ -208,23 +208,23 @@
 <div class="comments wow fadeInUp" data-wow-duration="2s">
         <h2>Отзывы клиентов</h2>
     <div class="owl-carousel">
-        <div><img src="/img/comments-girl.png" alt="">
+        <div><img src="img/comments-girl.png" alt="">
         <p>Работаю очень довольна :)<br>
             Было много заинтерисованных взглядов на букет. Хочу заказать еще!
         </p>
         </div>
-        <div><img src="/img/comments-boy.png" alt="">
+        <div><img src="img/comments-boy.png" alt="">
         <p>Якщо хочете якісний та недорогий подарунок для своїх близьких, тоді сміливо замовляйте.Букет був створенний дуже гарно та за швидкий термін. Мама була задоволена. Дуже вдячна Вікторії, буду замовляти ще!</p>
         </div>
-        <div><img src="/img/comments-girl.png" alt="">
+        <div><img src="img/comments-girl.png" alt="">
             <p>Работаю очень довольна :)<br>
                 Было много заинтерисованных взглядов на букет. Хочу заказать еще!
             </p>
             </div>
-            <div><img src="/img/comments-boy.png" alt="">
+            <div><img src="img/comments-boy.png" alt="">
             <p>Якщо хочете якісний та недорогий подарунок для своїх близьких, тоді сміливо замовляйте.Букет був створенний дуже гарно та за швидкий термін. Мама була задоволена. Дуже вдячна Вікторії, буду замовляти ще!</p>
             </div>
-            <div><img src="/img/comments-girl.png" alt="">
+            <div><img src="img/comments-girl.png" alt="">
                 <p>Работаю очень довольна :)<br>
                     Было много заинтерисованных взглядов на букет. Хочу заказать еще!
                 </p>
