--- a/flowers.kh/Index.html
+++ b/flowers.kh/Index.html
@@ -6,7 +6,7 @@
     </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/img/icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -180,7 +180,7 @@
                 </div>
                 </div>
     </section>
-    <div class="container-fluid"
+    <div class="container-fluid">
             <div class="row">
     <section id="s_3">
                     <div class="masonry-container">
