--- a/flowers.kh/Index.html
+++ b/flowers.kh/Index.html
@@ -30,7 +30,7 @@
     <div class="loader"></div>
 </div>
 <header id="top">
-        <nav class="navbar navbar-default top_nav" role="navigation">
+        <nav class="navbar navbar-default top_nav navbar-inverse" role="navigation">
                 <div class="container-fluid custom-menu">
                     <div class="container">
                   <div class="navbar-header">
