--- a/delpost.kh/delpost.html
+++ b/delpost.kh/delpost.html
@@ -4,11 +4,11 @@
         <title>delpost.kh</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="/style/css/bootstrap.css" rel="stylesheet">
-        <link href="/style/css/bootstrap-theme.css" rel="stylesheet">
-        <link href="/style/delpost.css" rel="stylesheet">
-        <script src="/style/js/jquery-3.3.1.js"></script>
-        <script src="/style/js/bootstrap.js"></script>
+        <link href="style/css/bootstrap.css" rel="stylesheet">
+        <link href="style/css/bootstrap-theme.css" rel="stylesheet">
+        <link href="style/delpost.css" rel="stylesheet">
+        <script src="style/js/jquery-3.3.1.js"></script>
+        <script src="style/js/bootstrap.js"></script>
     </head>
 <body>
 <div class="container custom-header">
@@ -69,21 +69,21 @@
         </ol>
         <div class="carousel-inner">
           <div class="item active">
-            <img src="/picture/delpost_slider_1.jpg" alt="0" width="auto" height="500px">
+            <img src="picture/delpost_slider_1.jpg" alt="0" width="auto" height="500px">
             <div class="carousel-caption">
               <h1>Международные грузоперевозки автомобильным транспортом</h1>
               <button class="btn btn-danger slider-link">Заказать услугу</button>
             </div>
           </div>
           <div class="item">
-            <img src="/picture/delpost_slider_2.jpg" alt="1" width="auto" height="500px">
+            <img src="picture/delpost_slider_2.jpg" alt="1" width="auto" height="500px">
             <div class="carousel-caption">
               <h1>Международные грузоперевозки автомобильным транспортом</h1>
               <button class="btn btn-danger slider-link">Заказать услугу</button>
             </div>
           </div>
           <div class="item">
-            <img src="/picture/delpost_slider_3.jpg" alt="2" width="auto" height="500px">
+            <img src="picture/delpost_slider_3.jpg" alt="2" width="auto" height="500px">
             <div class="carousel-caption">
               <h1>Международные грузоперевозки автомобильным транспортом</h1>
               <button class="btn btn-danger slider-link">Заказать услугу</button>
@@ -103,7 +103,7 @@
 <div class="col-md-3 col-xs-12">
     <div class="service-block">
         <div class="rotate">
-    <img src="/picture/service-logo_1.png">
+    <img src="picture/service-logo_1.png">
 <h3>Грузовые <br>  перевозки</h3>
 <div class="descr_1">
 <a href="#">Подробнее <span class="glyphicon glyphicon-eye-open"></span></a>
@@ -113,7 +113,7 @@
 </div>
 <div class="col-md-3  col-xs-12">
     <div class="service-block">
-    <img src="/picture/service-logo_2.png">
+    <img src="picture/service-logo_2.png">
     <h3>Адресная <br> доставка</h3>
     <div class="descr_2">
         <a href="#">Подробнее <span class="glyphicon glyphicon-eye-open"></span></a>
@@ -122,7 +122,7 @@
 </div>
 <div class="col-md-3 col-xs-12">
     <div class="service-block">
-    <img src="/picture/service-logo_3.png">
+    <img src="picture/service-logo_3.png">
     <h3>Клиенсткая <br> доставка</h3>
     <div class="descr_3">
     <a href="#">Подробнее <span class="glyphicon glyphicon-eye-open"></span></a>
@@ -131,7 +131,7 @@
 </div>
 <div class="col-md-3  col-xs-12">
     <div class="service-block bg-block_4">
-    <img src="/picture/service-logo_4.png">
+    <img src="picture/service-logo_4.png">
     <h3>Крос- <br> докинг</h3>
 <div class="descr_4">
     <a href="#">Подробнее <span class="glyphicon glyphicon-eye-open"></span></a>
@@ -145,15 +145,15 @@
     <div class="container custom-benefits">
         <div class="row">
            <div class="col-md-4 col-xs-12">
-<img src="/picture/benefits_1.jpg">
+<img src="picture/benefits_1.jpg">
 <p>Доставка <br> 24/7</p>
            </div>
            <div class="col-md-4 col-xs-12">
-<img src="/picture/benefits_2.jpg">
+<img src="picture/benefits_2.jpg">
 <p>Склады и Представительства на територии Украины</p>
            </div>
            <div class="col-md-4 col-xs-12">
-<img src="/picture/benefits_3.jpg">
+<img src="picture/benefits_3.jpg">
 <p>Решение любых логистических проблем</p>
            </div>
         </div>
@@ -170,7 +170,7 @@
 <div class="container footer">
     <div class="row">
         <div class="col-md-2 col-xs-12 custom-logo">
-            <img src="/picture/delpost-logo.png">
+            <img src="picture/delpost-logo.png">
         </div>
         <div class="col-md-5 col-xs-12">
             <div class="col-xs-6">
@@ -186,7 +186,7 @@
         </div>
         <div class="col-xs-5 social">
             <div class="col-xs-5">
-                <img src="/picture/social.png">
+                <img src="picture/social.png">
             </div>
             <div class="col-xs-7 input-append">
                 <form>
