--- a/delpost.kh/delpost-contact.html
+++ b/delpost.kh/delpost-contact.html
@@ -4,16 +4,16 @@
         <title>delpost.kh</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="/style/css/bootstrap.css" rel="stylesheet">
-        <link href="/style/css/bootstrap-theme.css" rel="stylesheet">
-        <link href="/style/delpost.css" rel="stylesheet">
-        <script src="/style/js/jquery-3.3.1.js"></script>
-        <script src="/style/js/bootstrap.js"></script>
+        <link href="style/css/bootstrap.css" rel="stylesheet">
+        <link href="style/css/bootstrap-theme.css" rel="stylesheet">
+        <link href="style/delpost.css" rel="stylesheet">
+        <script src="style/js/jquery-3.3.1.js"></script>
+        <script src="style/js/bootstrap.js"></script>
     </head>
 <body>
 <div class="container custom-header">
     <div class="row">
-        <div class="col-md-2 col-xs-12 custom-logo"><img src="/picture/delpost-logo.png"></div>
+        <div class="col-md-2 col-xs-12 custom-logo"><img src="picture/delpost-logo.png"></div>
         <div class="col-md-4 col-xs-12 input-append">
             <form>
                 <label>Отследить посылку</label><br>
@@ -84,7 +84,7 @@
 <div class="container footer">
         <div class="row">
             <div class="col-md-2 col-xs-12 custom-logo">
-                <img src="/picture/delpost-logo.png">
+                <img src="picture/delpost-logo.png">
             </div>
             <div class="col-md-5 col-xs-12">
                 <div class="col-xs-6">
@@ -100,7 +100,7 @@
             </div>
             <div class="col-xs-5 social">
                 <div class="col-xs-5">
-                    <img src="/picture/social.png">
+                    <img src="picture/social.png">
                 </div>
                 <div class="col-xs-7 input-append">
                     <form>
