--- a/delpost.kh/delpost-news.html
+++ b/delpost.kh/delpost-news.html
@@ -4,16 +4,16 @@
         <title>delpost.kh</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="/style/css/bootstrap.css" rel="stylesheet">
-        <link href="/style/css/bootstrap-theme.css" rel="stylesheet">
-        <link href="/style/delpost.css" rel="stylesheet">
-        <script src="/style/js/jquery-3.3.1.js"></script>
-        <script src="/style/js/bootstrap.js"></script>
+        <link href="style/css/bootstrap.css" rel="stylesheet">
+        <link href="style/css/bootstrap-theme.css" rel="stylesheet">
+        <link href="style/delpost.css" rel="stylesheet">
+        <script src="style/js/jquery-3.3.1.js"></script>
+        <script src="style/js/bootstrap.js"></script>
     </head>
 <body>
 <div class="container custom-header">
     <div class="row">
-        <div class="col-md-2 col-xs-12 custom-logo"><img src="/picture/delpost-logo.png"></div>
+        <div class="col-md-2 col-xs-12 custom-logo"><img src="picture/delpost-logo.png"></div>
         <div class="col-md-4 col-xs-12 input-append">
             <form>
                 <label>Отследить посылку</label><br>
@@ -66,7 +66,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="block-news">
-                <img src="/news/new_1.jpg">
+                <img src="news/new_1.jpg">
                 <h4>Грузовые перевозки</h4>
                 <p>По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых клиентов недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом и придаст неповторимый колорит советских време</p>
             <a href="#">Читать<span class="glyphicon glyphicon-chevron-right"></span></a>
@@ -74,7 +74,7 @@
                </div>
             <div class="col-md-4">
                 <div class="block-news">
-               <img src="/news/new_2.jpg">
+               <img src="news/new_2.jpg">
                <h4>Украинский морской порт</h4>
                <p>По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых клиентов недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом и придаст неповторимый колорит советских време</p>
                <a href="#">Читать<span class="glyphicon glyphicon-chevron-right"></span></a>
@@ -82,7 +82,7 @@
            </div>
            <div class="col-md-4">
                <div class="block-news">
-               <img src="/news/new_3.jpg">
+               <img src="news/new_3.jpg">
                <h4>Логистические технологии</h4>
                <p>По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых клиентов недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом и придаст неповторимый колорит советских време</p>
                <a href="#">Читать<span class="glyphicon glyphicon-chevron-right"></span></a>
@@ -100,7 +100,7 @@
 <div class="container footer">
         <div class="row">
             <div class="col-md-2 col-xs-12 custom-logo">
-                <img src="/picture/delpost-logo.png">
+                <img src="picture/delpost-logo.png">
             </div>
             <div class="col-md-5 col-xs-12">
                 <div class="col-xs-6">
@@ -116,7 +116,7 @@
             </div>
             <div class="col-xs-5 social">
                 <div class="col-xs-5">
-                    <img src="/picture/social.png">
+                    <img src="picture/social.png">
                 </div>
                 <div class="col-xs-7 input-append">
                     <form>
