--- a/delpost.kh/delpost-partners.html
+++ b/delpost.kh/delpost-partners.html
@@ -4,16 +4,16 @@
         <title>delpost.kh</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="/style/css/bootstrap.css" rel="stylesheet">
-        <link href="/style/css/bootstrap-theme.css" rel="stylesheet">
-        <link href="/style/delpost.css" rel="stylesheet">
-        <script src="/style/js/jquery-3.3.1.js"></script>
-        <script src="/style/js/bootstrap.js"></script>
+        <link href="style/css/bootstrap.css" rel="stylesheet">
+        <link href="style/css/bootstrap-theme.css" rel="stylesheet">
+        <link href="style/delpost.css" rel="stylesheet">
+        <script src="style/js/jquery-3.3.1.js"></script>
+        <script src="style/js/bootstrap.js"></script>
     </head>
 <body>
 <div class="container custom-header">
     <div class="row">
-        <div class="col-md-2 col-xs-12 custom-logo"><img src="/picture/delpost-logo.png"></div>
+        <div class="col-md-2 col-xs-12 custom-logo"><img src="picture/delpost-logo.png"></div>
         <div class="col-md-4 col-xs-12 input-append">
             <form>
                 <label>Отследить посылку</label><br>
@@ -64,55 +64,55 @@
 <div class="container custom-partners">
     <div class="row">
         <div class="col-md-3 col-sm-6 col-xs-12">
-             <a href="#"><img src="/partners/mary_kay.png"></a>
+             <a href="#"><img src="partners/mary_kay.png"></a>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-12">
-                <a href="#"><img src="/partners/oriflame.png"></a>
+                <a href="#"><img src="partners/oriflame.png"></a>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-12">
-                <a href="#"><img src="/partners/avon.png"></a>
+                <a href="#"><img src="partners/avon.png"></a>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-12">
-                <a href="#"><img src="/partners/bogoduhovskij.png"></a>
+                <a href="#"><img src="partners/bogoduhovskij.png"></a>
         </div>
     </div>
 <div class="row">
         <div class="col-md-3 col-sm-6 col-xs-12">
-                <a href="#"><img src="/partners/obolon.png"></a>
+                <a href="#"><img src="partners/obolon.png"></a>
            </div>
            <div class="col-md-3 col-sm-6 col-xs-12">
-                   <a href="#"><img src="/partners/trubostal.png"></a>
+                   <a href="#"><img src="partners/trubostal.png"></a>
            </div>
            <div class="col-md-3 col-sm-6 col-xs-12">
-                   <a href="#"><img src="/partners/eridon.png"></a>
+                   <a href="#"><img src="partners/eridon.png"></a>
            </div>
            <div class="col-md-3 col-sm-6 col-xs-12">
-                   <a href="#"><img src="/partners/eldorado.png"></a>
+                   <a href="#"><img src="partners/eldorado.png"></a>
            </div>
 </div>
 <div class="row">
         <div class="col-md-3 col-sm-6 col-xs-12">
-                <a href="#"><img src="/partners/Schenker.png"></a>
+                <a href="#"><img src="partners/Schenker.png"></a>
            </div>
            <div class="col-md-3 col-sm-6 col-xs-12">
-                   <a href="#"><img src="/partners/comfy.png"></a>
+                   <a href="#"><img src="partners/comfy.png"></a>
            </div>
            <div class="col-md-3 col-sm-6 col-xs-12">
-                   <a href="#"><img src="/partners/zammler.png"></a>
+                   <a href="#"><img src="partners/zammler.png"></a>
            </div>
            <div class="col-md-3 col-sm-6 col-xs-12">
-                   <a href="#"><img src="/partners/grona.png"></a>
+                   <a href="#"><img src="partners/grona.png"></a>
            </div>
 </div>
 <div class="row">
         <div class="col-md-3 col-sm-6 col-xs-12">
-                <a href="#"><img src="/partners/moyo.png"></a>
+                <a href="#"><img src="partners/moyo.png"></a>
            </div>
            <div class="col-md-3 col-sm-6 col-xs-12">
-                   <a href="#"><img src="/partners/eva.png"></a>
+                   <a href="#"><img src="partners/eva.png"></a>
            </div>
            <div class="col-md-3 col-sm-6 col-xs-12">
-                   <a href="#"><img src="/partners/grand.png"></a>
+                   <a href="#"><img src="partners/grand.png"></a>
            </div>
            <div class="col-md-3 col-sm-6 col-xs-12 add-partners">
                   <a href="#">Стать партнером</a>
@@ -122,7 +122,7 @@
 <div class="container footer">
         <div class="row">
             <div class="col-md-2 col-xs-12 custom-logo">
-                <img src="/picture/delpost-logo.png">
+                <img src="picture/delpost-logo.png">
             </div>
             <div class="col-md-5 col-xs-12">
                 <div class="col-xs-6">
@@ -138,7 +138,7 @@
             </div>
             <div class="col-xs-5 social">
                 <div class="col-xs-5">
-                    <img src="/picture/social.png">
+                    <img src="picture/social.png">
                 </div>
                 <div class="col-xs-7 input-append">
                     <form>
