--- a/delpost.kh/delpost.html
+++ b/delpost.kh/delpost.html
@@ -13,7 +13,7 @@
 <body>
 <div class="container custom-header">
     <div class="row">
-        <div class="col-md-2 col-xs-12 custom-logo"><img src="/picture/delpost-logo.png"></div>
+        <div class="col-md-2 col-xs-12 custom-logo"><img src="picture/delpost-logo.png"></div>
         <div class="col-md-4 col-xs-12 input-append">
             <form>
                 <label>Отследить посылку</label><br>
