--- a/flowers.kh/Index.html
+++ b/flowers.kh/Index.html
@@ -89,7 +89,7 @@
  
                                 <!-- Hidden Required Fields -->
                                 <input type="hidden" name="project_name" value="Site Name">
-                                <input type="hidden" name="admin_email" value="Godiegogo@ukr.net">
+                                <input type="hidden" name="admin_email" value="viktoriakezlya@ukr.net">
                                 <input type="hidden" name="form_subject" value="Новый заказ">
                                 <!-- END Hidden Required Fields -->
                                
