--- a/flowers.kh/Index.html
+++ b/flowers.kh/Index.html
@@ -208,23 +208,23 @@
 <div class="comments wow fadeInUp" data-wow-duration="2s">
         <h2>Отзывы клиентов</h2>
         <div class="owl-carousel">
-            <div><img src="/img/comments-girl.png" alt="">
+            <div><img src="img/comments-girl.png" alt="">
             <p>Работаю очень довольна :)<br>
                 Было много заинтерисованных взглядов на букет. Хочу заказать еще!
             </p>
             </div>
-            <div><img src="/img/comments-boy.png" alt="">
+            <div><img src="img/comments-boy.png" alt="">
             <p>Якщо хочете якісний та недорогий подарунок для своїх близьких, тоді сміливо замовляйте.Букет був створенний дуже гарно та за швидкий термін. Мама була задоволена. Дуже вдячна Вікторії, буду замовляти ще!</p>
             </div>
-            <div><img src="/img/comments-girl-2.png" alt="">
+            <div><img src="img/comments-girl-2.png" alt="">
                 <p>
                     Спасибо за потрясающий букет, очень креативно и быстро!
                 </p>
                 </div>
-                <div><img src="/img/comments-boy-2.png" alt="">
+                <div><img src="img/comments-boy-2.png" alt="">
                 <p>Прекрасная работа! Очень понравилось девушке, которая была в полном восторге!</p>
                 </div>
-                <div><img src="/img/comments-girl-3.png" alt="">
+                <div><img src="img/comments-girl-3.png" alt="">
                     <p>
                         Супер!Супер!Супер!!! Мама была приятно удевлена новым подходом к подаркам, спасибо огромное!
                     </p>
