--- a/rs-studio.kh/Index.html
+++ b/rs-studio.kh/Index.html
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <img class="logo" src="/img/logo.png" alt="logo">
+                    <img class="logo" src="img/logo.png" alt="logo">
                     <h3>Stay Tuned...........</h3>
                     <h1>We are coming very soon</h1>
         <div class="row">
