--- a/go-business.kh/Index.html
+++ b/go-business.kh/Index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head lang="en">
     <title>
         TITLE
@@ -16,6 +15,7 @@
     <link rel="stylesheet" href="css/owl.theme.green.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/media.css">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
@@ -25,21 +25,21 @@
     <div class="container-fluid bg-banner">
         <div class="container">
             <div class="row">
-                <div class="col-xs-6"></div>
-                <div class="col-xs-6 menu">
+                <div class="col-md-6 col-xs-6"></div>
+                <div class="col-md-6 menu col-xs-6">
                     <nav>
                         <ul>
                             <li>
-                                <a href="">Home</a>
+                                <a href="#">Home</a>
                             </li>
                             <li>
-                                <a href="">Services</a>
+                                <a href="#services">Services</a>
                             </li>
                             <li>
-                                <a href="">Portfolio</a>
+                                <a href="#portfolio">Portfolio</a>
                             </li>
                             <li>
-                                <a href="">Blog</a>
+                                <a href="#blog">Blog</a>
                             </li>
                         </ul>
                     </nav>
@@ -54,7 +54,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid bg-service">
+    <div id="services" class="container-fluid bg-service">
         <div class="row">
             <div class="col-xs-12">
                 <div class="service-text">
@@ -68,7 +68,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-xs-4">
+                <div class="col-md-4 col-xs-12">
                     <div class="block-service">
                         <img src="img/icon-1.png" alt="web Development">
                         <h4>Web Development</h4>
@@ -78,7 +78,7 @@
 
                     </div>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-md-4 col-xs-12">
                     <div class="block-service">
                         <img src="img/icon-2.png" alt="UI/UX">
                         <h4>UI/UX Design</h4>
@@ -87,7 +87,7 @@
                             sed provident delectus.</p>
                     </div>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-md-4 col-xs-12">
                     <div class="block-service">
                         <img src="img/icon-3.png" alt="Software">
                         <h4>Software Development</h4>
@@ -100,7 +100,7 @@
         </div>
 
     </div>
-    <div class="container-fluid bg-portfolio">
+    <div id="portfolio" class="container-fluid bg-portfolio">
         <div class="container">
             <div class="text-portfolio">
                 <h2>Our
@@ -110,34 +110,34 @@
                     deserunt quas, esse dicta.</p>
             </div>
             <div class="row">
-                <div class="col-xs-4">
+                <div class="col-md-4 col-xs-12">
                     <a href="#">
                         <div class="block-portfolio bg-prt-1"></div>
                     </a>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-md-4 col-xs-12">
                     <a href="#">
                         <div class="block-portfolio bg-prt-2"></div>
                     </a>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-md-4 col-xs-12">
                     <a href="#">
                         <div class="block-portfolio bg-prt-3"></div>
                     </a>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-4">
+                <div class="col-md-4 col-xs-12">
                     <a href="#">
                         <div class="block-portfolio bg-prt-4"></div>
                     </a>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-md-4 col-xs-12">
                     <a href="#">
                         <div class="block-portfolio bg-prt-5"></div>
                     </a>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-md-4 col-xs-12">
                     <a href="#">
                         <div class="block-portfolio bg-prt-6"></div>
                     </a>
@@ -157,7 +157,7 @@
                     big picture and believe every business</p>
             </div>
             <div class="row">
-                <div class="col-xs-3">
+                <div class="col-md-3 col-xs-12">
                     <div class="block-team team-face-1">
                         <div class="team-social">
                             <h4>md atikur rahman</h4>
@@ -186,7 +186,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-3">
+                <div class="col-md-3 col-xs-12">
                     <div class="block-team team-face-2">
                         <div class="team-social">
                             <h4>md atikur rahman</h4>
@@ -215,7 +215,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-3">
+                <div class="col-md-3 col-xs-12">
                     <div class="block-team team-face-3">
                         <div class="team-social">
                             <h4>md atikur rahman</h4>
@@ -244,7 +244,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-3">
+                <div class="col-md-3 col-xs-12">
                     <div class="block-team team-face-4">
                         <div class="team-social">
                             <h4>md atikur rahman</h4>
@@ -285,18 +285,18 @@
                         <div class="owl-carousel owl-theme">
                             <div>
                                 <div class="picture picture-face-1"></div>
-                                <p>Designing is a matter of concentration. You go deep into what you want to do. It's about
-                                    intensive research, really.</p>
+                               <div class="picture-text"><p>Designing is a matter of concentration. You go deep into what you want to do. It's about
+                                intensive research, really.</p></div> 
                             </div>
                             <div>
                                 <div class="picture picture-face-2"></div>
-                                <p>Designing is a matter of concentration. You go deep into what you want to do. It's about
-                                    intensive research, really.</p>
+                                <div class="picture-text"><p>Designing is a matter of concentration. You go deep into what you want to do. It's about
+                                    intensive research, really.</p></div> 
                             </div>
                             <div>
                                 <div class="picture picture-face-3"></div>
-                                <p>Designing is a matter of concentration. You go deep into what you want to do. It's about
-                                    intensive research, really.</p>
+                                <div class="picture-text"><p>Designing is a matter of concentration. You go deep into what you want to do. It's about
+                                    intensive research, really.</p></div> 
                             </div>
 
                         </div>
@@ -342,11 +342,11 @@
 
         </div>
     </div>
-    <div class="container-fluid bg-blog">
+    <div id="blog" class="container-fluid bg-blog">
         <div class="container">
             <h2 class="text-blog">Recent blog</h2>
             <div class="row">
-                <div class="col-xs-4">
+                <div class="col-md-4 col-xs-12">
                     <div class="thumbnail block-blog">
                         <img src="/img/blog-1.png" alt="...">
                         <div class="caption">
@@ -371,7 +371,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-md-4 col-xs-12">
                     <div class="thumbnail block-blog">
                         <img src="/img/blog-2.png" alt="...">
                         <div class="caption">
@@ -396,7 +396,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-md-4 col-xs-12">
                     <div class="thumbnail block-blog">
                         <img src="/img/blog-3.png" alt="...">
                         <div class="caption">
@@ -427,7 +427,7 @@
 <div class="container-fluid bg-contact">
     <div class="container">
         <div class="row">
-            <div class="col-xs-7">
+            <div class="col-md-7 col-xs-12">
                 <div class="form-contact">
                     <h2>Don't be shy, say hello!</h2>
                     <form>
@@ -452,7 +452,7 @@
                       </form>
                 </div>
             </div>
-            <div class="col-xs-5">
+            <div class="col-md-5 col-xs-12">
                 <div class="info-contact">
                     <h2>our office</h2>
                     <p><span class="glyphicon glyphicon-home"></span>Kandintie 16 3/B <br> Oulu, Finland</p>
@@ -465,7 +465,7 @@
 </div>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-md-12 col-xs-12">
             <div class="footer-logo">
                 <img src="img/footer-logo.png" alt="go business">
                 <ul>
@@ -515,7 +515,6 @@
     </div>
 </div>
 
-<!-- 24265 холодна вода 1665 добр 5\69 -->
 
 
 
@@ -528,7 +527,8 @@
 
 
 
-    <script src="js/owl.carousel.min.js"></script>
+
+<script src="js/owl.carousel.min.js"></script>
 </body>
 
 </html>
