--- a/go-business.kh/Index.html
+++ b/go-business.kh/Index.html
@@ -348,7 +348,7 @@
             <div class="row">
                 <div class="col-md-4 col-xs-12">
                     <div class="thumbnail block-blog">
-                        <img src="/img/blog-1.png" alt="...">
+                        <img src="img/blog-1.png" alt="...">
                         <div class="caption">
                             <h3>Lorem lpsum is simply</h3>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo rem ipsam ad aspernatur, modi
@@ -373,7 +373,7 @@
                 </div>
                 <div class="col-md-4 col-xs-12">
                     <div class="thumbnail block-blog">
-                        <img src="/img/blog-2.png" alt="...">
+                        <img src="img/blog-2.png" alt="...">
                         <div class="caption">
                             <h3>Lorem lpsum is simply</h3>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo rem ipsam ad aspernatur, modi
@@ -398,7 +398,7 @@
                 </div>
                 <div class="col-md-4 col-xs-12">
                     <div class="thumbnail block-blog">
-                        <img src="/img/blog-3.png" alt="...">
+                        <img src="img/blog-3.png" alt="...">
                         <div class="caption">
                             <h3>Lorem lpsum is simply</h3>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo rem ipsam ad aspernatur, modi
