--- a/go-business.kh/Index.html
+++ b/go-business.kh/Index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <title>
-        TITLE
+        Go-business
     </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
