--- a/flowers.kh/Index.html
+++ b/flowers.kh/Index.html
@@ -26,9 +26,9 @@
 </head>
 
 <body>
-<div id="page-preloader" class="preloader">
+<!-- <div id="page-preloader" class="preloader">
     <div class="loader"></div>
-</div>
+</div> -->
 <header id="top">
         <nav class="navbar navbar-default top_nav navbar-inverse" role="navigation">
                 <div class="container-fluid custom-menu">
