--- a/go-business.kh/Index.html
+++ b/go-business.kh/Index.html
@@ -72,9 +72,9 @@
                     <div class="block-service">
                         <img src="img/icon-1.png" alt="web Development">
                         <h4>Web Development</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet dolore rerum beatae reiciendis. Rem,
-                            minima? Minima ut aliquid a tempora at, nam ipsam temporibus assumenda eligendi accusantium,
-                            eaque veritatis possimus.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus recusandae quia consequuntur esse fugit
+                            explicabo natus dolor inventore id repudiandae, temporibus enim. Soluta odit perferendis consectetur
+                            libero ad molestiae veritatis.</p>
 
                     </div>
                 </div>
@@ -82,18 +82,18 @@
                     <div class="block-service">
                         <img src="img/icon-2.png" alt="UI/UX">
                         <h4>UI/UX Design</h4>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus a velit ut, cumque exercitationem
-                            quae incidunt quam repudiandae quis error harum obcaecati veniam sit minima ullam! Reiciendis
-                            sed provident delectus.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus recusandae quia consequuntur esse fugit
+                            explicabo natus dolor inventore id repudiandae, temporibus enim. Soluta odit perferendis consectetur
+                            libero ad molestiae veritatis.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-xs-12">
                     <div class="block-service">
                         <img src="img/icon-3.png" alt="Software">
                         <h4>Software Development</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis illo voluptas similique rem nihil
-                            molestiae aperiam ipsa omnis, quisquam perferendis soluta facere perspiciatis ipsam exercitationem
-                            quidem quibusdam consequatur! Nemo, maiores!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus recusandae quia consequuntur esse fugit
+                            explicabo natus dolor inventore id repudiandae, temporibus enim. Soluta odit perferendis consectetur
+                            .</p>
                     </div>
                 </div>
             </div>
@@ -110,34 +110,34 @@
                     deserunt quas, esse dicta.</p>
             </div>
             <div class="row">
-                <div class="col-md-4 col-xs-12">
+                <div class="col-md-4 col-sm-6 col-xs-12">
                     <a href="#">
                         <div class="block-portfolio bg-prt-1"></div>
                     </a>
                 </div>
-                <div class="col-md-4 col-xs-12">
+                <div class="col-md-4 col-sm-6 col-xs-12">
                     <a href="#">
                         <div class="block-portfolio bg-prt-2"></div>
                     </a>
                 </div>
-                <div class="col-md-4 col-xs-12">
+                <div class="col-md-4 col-sm-6 col-xs-12">
                     <a href="#">
                         <div class="block-portfolio bg-prt-3"></div>
                     </a>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-xs-12">
+                <div class="col-md-4 col-sm-6 col-xs-12">
                     <a href="#">
                         <div class="block-portfolio bg-prt-4"></div>
                     </a>
                 </div>
-                <div class="col-md-4 col-xs-12">
+                <div class="col-md-4 col-sm-6 col-xs-12">
                     <a href="#">
                         <div class="block-portfolio bg-prt-5"></div>
                     </a>
                 </div>
-                <div class="col-md-4 col-xs-12">
+                <div class="col-md-4 col-sm-6 col-xs-12">
                     <a href="#">
                         <div class="block-portfolio bg-prt-6"></div>
                     </a>
@@ -157,7 +157,7 @@
                     big picture and believe every business</p>
             </div>
             <div class="row">
-                <div class="col-md-3 col-xs-12">
+                <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="block-team team-face-1">
                         <div class="team-social">
                             <h4>md atikur rahman</h4>
@@ -186,7 +186,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 col-xs-12">
+                <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="block-team team-face-2">
                         <div class="team-social">
                             <h4>md atikur rahman</h4>
@@ -215,7 +215,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 col-xs-12">
+                <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="block-team team-face-3">
                         <div class="team-social">
                             <h4>md atikur rahman</h4>
@@ -244,7 +244,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 col-xs-12">
+                <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="block-team team-face-4">
                         <div class="team-social">
                             <h4>md atikur rahman</h4>
