--- a/hugma.kh/index.html
+++ b/hugma.kh/index.html
@@ -271,7 +271,7 @@
 
     <div class="container-fluid section-4">
         <div class="video">
-            <video controls src="https://youtu.be/SQzBlE5j-wM" height="500px" width="980px" poster="/img/bg-video.png"></video>
+            <video controls src="https://youtu.be/SQzBlE5j-wM" height="500px" width="980px" poster="img/bg-video.png"></video>
         </div>
     </div>
     <div class="container-fluid section-5">
